# rockchip-ai-stack

./: .gitmodules  README.md  rk3588_port_audit.md
.github/workflows/: GENAI-Audio-analyzer.yaml  GENAI-Multi-model-emb.yaml  GENAI-Multilevel-video-understanding.yaml  GENAI-Vdp.yaml  GENAI-doc-ingestion.yaml  GENAI-model-download.yaml  documentation-check.yaml  genai-pre-merge.yaml  modelregistry-build-pull-request.yaml  vector-retriever-milvus-scans.yaml
docker/: arm64-patterns.md
libraries/robotics-ai-libraries/orb-extractor/: Makefile
rk3588-port/: INTEGRATION.md  README.md
rk3588-port/audio-analyzer/: .env.example  README.md
rk3588-port/audio-analyzer/audio_analyzer/: main.py
rk3588-port/chat-qa/: README.md  requirements.txt
rk3588-port/chat-qa/app/: chain.py  custom_reranker.py  server.py
rk3588-port/document-ingestion/: README.md
rk3588-port/document-ingestion/app/: __init__.py  config.py  document.py  logger.py  main.py  store.py  url.py  utils.py
rk3588-port/multimodal-embedding/: .env.example  README.md  requirements.txt
rk3588-port/multimodal-embedding/src/: __init__.py  app.py  wrapper.py
rk3588-port/reranker/: .env.example  README.md
rk3588-port/reranker/app/: __init__.py  main.py  reranker.py
rk3588-port/shared/: lancedb_schema.py  rkllm_utils.py  rknn_utils.py
rk3588-port/vlm-proxy/: README.md  requirements.txt
rk3588-port/vlm-proxy/app/: data_models.py  proxy.py  utils.py
sample-applications/chat-question-and-answer/: docker-compose.yaml
sample-applications/chat-question-and-answer-core/docker/: Dockerfile  Dockerfile.ollama  compose.yaml
services/: INTEGRATION.md  README.md
services/audio-analyzer/: Dockerfile  README.md  compose.yaml  requirements.txt
services/chat-qa/: .env.example  Dockerfile  README.md  compose.yaml
services/document-ingestion/: .env.example  Dockerfile  README.md  compose.yaml  requirements.txt
services/model-download/: pyproject.toml
services/model-download/src/api/: main.py
services/multimodal-embedding/: Dockerfile  README.md  compose.yaml
services/reranker/: README.md  requirements.txt
services/shared/: lancedb_schema.py  requirements-base.txt
services/video-chunking-utils/: setup.py
services/vlm-proxy/: .env.example  requirements.txt
(+79 files in other folders)
